[pom] Add modules for javadoc usage and set javadoc compliance to 11