@@ -127,6 +127,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
+                    <additionalOptions combine.children="append">
+                        <option>--add-modules</option>
+                        <option>java.sql</option>
+                    </additionalOptions>
                     <windowtitle>JMockit Toolkit API</windowtitle>
                     <doctitle>JMockit Toolkit API Documentation</doctitle>
                     <sourceFileExcludes>mockit/asm/**,mockit/coverage/**,mockit/integration/**,mockit/internal/**</sourceFileExcludes>
